# elemental

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  xmake.lua
doc/spec/: binary-il-format.md  binary-il-specification.md
src/: CMakeLists.txt  main.cpp
src/common/: type.hpp
src/elements/: atom.hpp  membrane.hpp  rule.hpp
src/il/: format.hpp  il.hpp
src/runtime/: CMakeLists.txt  runtime.cpp  runtime.h
src/storage/: string_storage.hpp
